--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "axios": "^0.27.2",
     "dotenv": "^16.0.1",
-    "node-shikimori-api": "^1.1.3",
+    "express": "^4.18.1",
     "telegraf": "^4.8.5"
   }
 }
