--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
     "axios": "^0.27.2",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "passport": "^0.6.0",
+    "passport-shikimori": "^1.0.2",
+    "querystring": "^0.2.1",
+    "stormdb": "^0.6.0",
     "telegraf": "^4.8.5"
   }
 }
