--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "express": "^4.18.1",
     "fluent-ffmpeg": "^2.1.2",
     "fs-extra": "^10.1.0",
+    "http-proxy-agent": "^5.0.0",
+    "https-proxy-agent": "^5.0.1",
     "nodemon": "^2.0.19",
     "passport": "^0.6.0",
     "passport-shikimori": "^1.0.2",
