--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "fs-extra": "^10.1.0",
     "http-proxy-agent": "^5.0.0",
     "https-proxy-agent": "^5.0.1",
+    "node-fetch": "^3.2.10",
     "nodemon": "^2.0.19",
     "passport": "^0.6.0",
     "passport-shikimori": "^1.0.2",
