--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "puppeteer": "^15.5.0",
     "querystring": "^0.2.1",
     "stormdb": "^0.6.0",
+    "string-similarity": "^4.0.4",
     "telegraf": "^4.8.5"
   }
 }
